# clash-bases

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  Trunk.toml  bases.json  index.html  styles.css
.github/workflows/: deploy.yml  validate-bases.yml
scripts/: add-base.sh  validate-bases.py  validate-bases.sh
src/: main.rs
