[package]
name = "clash-bases"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Static site for storing, viewing, and sharing Clash of Clans base layouts."
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "HtmlInputElement",
    "HtmlSelectElement",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
